--- a/.github/workflows/benchmarks.yaml
+++ b/.github/workflows/benchmarks.yaml
@@ -1,7 +1,7 @@
 name: Benchmark
 
 on:
-  pull_request_target:
+  pull_request:
     branches:
       - '*'
     types:
@@ -47,7 +47,7 @@ jobs:
 
       - name: Run benchmark script
         run: |
-          source(".github/scripts/testsbis.R", echo = TRUE)
+          source(".github/scripts/benchmark.R", echo = TRUE)
         shell: Rscript {0}
 
       - name: Upload results
