--- a/.github/workflows/benchmarks.yaml
+++ b/.github/workflows/benchmarks.yaml
@@ -62,7 +62,6 @@ jobs:
         uses: thollander/actions-comment-pull-request@v3
         with:
           message: |
-            hi there
-# [![Comparison Plot](./.github/scripts/benchmark_result.png)](./.github/scripts/benchmark_result.png)\nGenerated via commit ${{ github.event.pull_request.head.sha }}\nDownload link for the artifact containing the test results: [↓ benchmark-results.zip](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ steps.artifact-upload-step.outputs.artifact-id }})
-          comment-include: "Download link"  
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            [![Comparison Plot](./.github/scripts/benchmark_result.png)](./.github/scripts/benchmark_result.png)\nGenerated via commit ${{ github.event.pull_request.head.sha }}\nDownload link for the artifact containing the test results: [↓ benchmark-results.zip](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ steps.artifact-upload-step.outputs.artifact-id }})
+          comment-tag: "Download link"  
+          github-token: ${{ secrets.GITHUB_TOKEN }}
