--- a/.github/workflows/benchmarks.yaml
+++ b/.github/workflows/benchmarks.yaml
@@ -62,7 +62,7 @@ jobs:
         uses: thollander/actions-comment-pull-request@v3
         with:
           message: |
-            [![Comparison Plot](./.github/scripts/benchmark_result.png)](./.github/scripts/benchmark_result.png)
+            [![Comparison Plot](/.github/scripts/benchmark_result.png)](/.github/scripts/benchmark_result.png)
             
             Generated via commit ${{ github.event.pull_request.head.sha }}
             
