--- a/.github/workflows/benchmarks.yaml
+++ b/.github/workflows/benchmarks.yaml
@@ -42,13 +42,13 @@ jobs:
 
       - name: Install required dependencies for benchmark
         run: |
-          install.packages(c("remotes", "bench", "dplyr", "tidyr", "ggplot2"))
+          install.packages(c("remotes", "bench", "dplyr", "tidyr", "tinytable"))
           remotes::install_github("DavisVaughan/cross")
         shell: Rscript {0}
-
+  
       - name: Run benchmark script
         run: |
-          source(".github/scripts/benchmark.R", echo = TRUE)
+          source(".github/scripts/benchmarks.R", echo = TRUE)
         shell: Rscript {0}
 
       - name: Upload results
@@ -61,8 +61,7 @@ jobs:
       - name: Push generated plot as a GH-bot comment
         run: |
           # Comment contents:
-          echo "[![Comparison Plot](./.github/scripts/benchmark_result.png)](./.github/scripts/benchmark_result.png)" >> report.md
           echo -e "\nGenerated via commit ${{ github.event.pull_request.head.sha }}" >> report.md
-          echo -e "\nDownload link for the artifact containing the test results: [↓ atime-results.zip](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ steps.artifact-upload-step.outputs.artifact-id }})" >> report.md
+          echo -e "\nDownload link for the artifact containing the test results: [↓ benchmark-results.zip](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ steps.artifact-upload-step.outputs.artifact-id }})" >> report.md
           cml comment update report.md
         shell: bash
