--- a/.github/workflows/benchmarks.yaml
+++ b/.github/workflows/benchmarks.yaml
@@ -12,7 +12,7 @@ on:
       - 'R/**'
       - 'src/**'
       - '.github/scripts/**'
-      - '.github/workflow/benchmarks.yaml'
+      - '.github/workflows/benchmarks.yaml'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -40,15 +40,18 @@ jobs:
         with:
           use-public-rspm: true
 
+      - name: Pandoc setup
+        uses: r-lib/actions/setup-pandoc@v2
+
       - name: Install required dependencies for benchmark
         run: |
-          install.packages(c("remotes", "bench", "dplyr", "tidyr", "ggplot2"))
+          install.packages(c("remotes", "bench", "dplyr", "Formula", "pandoc", "tidyr", "tinytable"))
           remotes::install_github("DavisVaughan/cross")
         shell: Rscript {0}
-
+  
       - name: Run benchmark script
         run: |
-          source(".github/scripts/benchmark.R", echo = TRUE)
+          source(".github/scripts/benchmarks.R", echo = TRUE)
         shell: Rscript {0}
 
       - name: Upload results
@@ -61,19 +64,7 @@ jobs:
       - name: Push generated plot as a GH-bot comment
         run: |
           # Comment contents:
-          echo "[![Comparison Plot](./.github/scripts/benchmark_result.png)](./.github/scripts/benchmark_result.png)" >> report.md
           echo -e "\nGenerated via commit ${{ github.event.pull_request.head.sha }}" >> report.md
-          echo -e "\nDownload link for the artifact containing the test results: [↓ atime-results.zip](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ steps.artifact-upload-step.outputs.artifact-id }})" >> report.md
+          echo -e "\nDownload link for the artifact containing the test results: [↓ benchmark-results.zip](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ steps.artifact-upload-step.outputs.artifact-id }})" >> report.md
           cml comment update report.md
         shell: bash
-      # - name: Add comment containing benchmark results 
-      #   uses: thollander/actions-comment-pull-request@v3
-      #   with:
-      #     message: |
-      #       [![Comparison Plot](./.github/scripts/benchmark_result.png)](./.github/scripts/benchmark_result.png)
-            
-      #       Generated via commit ${{ github.event.pull_request.head.sha }}
-            
-      #       Download link for the artifact containing the test results: [↓ benchmark-results.zip](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/artifacts/${{ steps.artifact-upload-step.outputs.artifact-id }})
-      #     comment-tag: "Download link"  
-      #     github-token: ${{ secrets.GITHUB_TOKEN }}
